# opencv-android

./: README.md
opencv/: settings.gradle
opencv/app/: build.gradle
opencv/app/src/main/: AndroidManifest.xml
opencv/app/src/main/java/org/yeshen/android/opencv/: MainActivity.java
opencv/app/src/main/res/layout/: activity_main.xml
opencv/app/src/main/res/values/: themes.xml
opencv/gradle/wrapper/: gradle-wrapper.properties
opencv/libyscv/: build.gradle
opencv/libyscv/src/main/cpp/: CMakeLists.txt  cv.cpp
opencv/libyscv/src/main/cpp/include/opencv2/: opencv_modules.hpp
opencv/libyscv/src/main/java/org/yeshen/android/cv/: YeshenCv.java
